<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <com.jaredrummler.android.widget.AnimatedSvgView
        android:id="@+id/animated_svg_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        app:animatedSvgFillColors="@array/taegwondo_glyph_colors"
        app:animatedSvgFillStart="1200"
        app:animatedSvgFillTime="1000"
        app:animatedSvgGlyphStrings="@array/taegwondo_glyph_strings"
        app:animatedSvgImageSizeX="400"
        app:animatedSvgImageSizeY="400"
        app:animatedSvgTraceMarkerLength="50"
        app:animatedSvgTraceTime="2000"
        app:animatedSvgTraceTimePerGlyph="1000"/>

    <Button
        android:id="@+id/buttonStartLogin"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/action_log_in"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/buttonStartSignup"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/action_sign_up"
        android:layout_marginTop="40dp" />
</LinearLayout>