<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:background="@color/colorAccent">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="70dp"
      android:text="@string/app_name"
      android:textSize="30sp"
      android:textColor='@color/appColor' />

  <com.jaredrummler.android.widget.AnimatedSvgView
      android:id="@+id/animated_svg_view2"
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:layout_gravity="center"
      android:layout_marginTop="70dp"
      android:layout_marginLeft="20dp"
      app:animatedSvgFillColors="@array/taegwondo_glyph_colors"
      app:animatedSvgFillStart="1200"
      app:animatedSvgFillTime="1000"
      app:animatedSvgGlyphStrings="@array/taegwondo_glyph_strings"
      app:animatedSvgImageSizeX="400"
      app:animatedSvgImageSizeY="400"
      app:animatedSvgTraceMarkerLength="50"
      app:animatedSvgTraceTime="2000"
      app:animatedSvgTraceTimePerGlyph="1000"/>

  <Spinner
      android:id="@+id/spinner"
      android:layout_marginTop="100dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  <Button
      android:id="@+id/buttonEvaluation"
      android:layout_width="140dp"
      android:layout_height="40dp"
      android:layout_marginTop="40dp"
      android:text="@string/start_evaluation" />

  <Button
      android:id="@+id/buttonCheck"
      android:layout_width="140dp"
      android:layout_height="40dp"
      android:layout_marginTop="20dp"
      android:text="@string/start_check" />

</LinearLayout>
